--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -59,7 +59,8 @@
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label class="" for="maximumAttendeeCapacity">
                                         キャパシティ
-                                        <a href="#" data-toggle="tooltip" title="最大収容人数を上書きできます"
+                                        <a href="#" data-toggle="tooltip"
+                                            title="<p class=&quot;text-left mb-0&quot;>最大収容人数を設定します。<br>座席有の場合、デフォルトでスクリーン座席数に従い、それより大きい値設定は無視されます。</p>"
                                             style="pointer-events: auto;">
                                             <span class="material-icons" style="font-size: 1.2em;">
                                                 help
@@ -222,11 +223,11 @@
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
-                                    <label class="bmd-label-static">座席指定</label>
+                                    <label class="bmd-label-static">座席有無</label>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
                                             <input class="form-check-input" type="checkbox" value="1"
-                                                name="reservedSeatsAvailable" checked>座席指定あり
+                                                name="reservedSeatsAvailable" checked>座席有
                                             <span class="form-check-sign">
                                                 <span class="check"></span>
                                             </span>
