### Changed - 劇場上映作品の上映方式を非必須に変更

--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -212,7 +212,7 @@
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-12">
                         <label for="videoFormatType[]" class="bmd-label-static">
-                            上映方式<span class="text-danger">＊</span>
+                            上映方式
                         </label>
 
                         <% videoFormatTypes.forEach((videoFormatType, key) => { %>
