--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -82,6 +82,16 @@
 
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-4">
+                                    <label class="bmd-label-static" for="seller">販売者</label>
+                                    <select class="form-control" name="seller">
+                                        <% for (seller of sellers) { %>
+                                        <option value="<%= seller.id %>">
+                                            <%= seller.name.ja %>
+                                        </option>
+                                        <% } %>
+                                    </select>
+                                </div>
+                                <div class="form-group bmd-form-group col-md-4">
                                     <label class="bmd-label-static" for="ticketTypeGroup">券種グループ</label>
                                     <select class="form-control" name="ticketTypeGroup">
                                         <option value="">選択してください</option>
@@ -92,13 +102,13 @@
                                         <% } %>
                                     </select>
                                 </div>
-                                <div class="form-group bmd-form-group col-md-4">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label class="bmd-label-static" for="maxSeatNumber">上限枚数</label>
                                     <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
                                 </div>
 
                                 <% if (req.subscription.settings.useSeats) { %>
-                                <div class="form-group bmd-form-group col-md-4">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label class="bmd-label-static">座席有無
                                     </label>
                                     <div class="form-check">
