--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -23,9 +23,9 @@
                                         <option value="<%= movieTheater.id %>"
                                             data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
                                             data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
-                                            data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
-                                            <%= movieTheater.name.ja %>
-                                        </option>
+                                            data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>"
+                                            data-name="<%= movieTheater.name.ja %>">
+                                            <%= movieTheater.name.ja %></option>
                                         <% } %>
                                         <% } else { %>
                                         <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
@@ -148,9 +148,7 @@
                                     <label class="bmd-label-static">販売者</label>
                                     <select class="form-control" name="seller">
                                         <% for (seller of sellers) { %>
-                                        <option value="<%= seller.id %>">
-                                            <%= seller.name.ja %>
-                                        </option>
+                                        <option value="<%= seller.id %>"><%= seller.name.ja %></option>
                                         <% } %>
                                     </select>
                                 </div>
