--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -206,8 +206,10 @@
             <input type="hidden" name="day" value="">
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary update-button">更新</button>
-                <button type="button" class="btn btn-danger delete-button">削除</button>
+                <button type="button" class="btn btn-primary update-button">
+                    <i class="material-icons">save</i> 保存</button>
+                <button type="button" class="btn btn-danger delete-button">
+                    <i class="material-icons">cancel</i> キャンセル</button>
                 <button type="button" class="btn bg-dark-gray text-white" data-dismiss="modal">閉じる</button>
 
             </div>
