--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -69,7 +69,7 @@ Aa-4
                                     </select>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-2">
+                                <div class="form-group bmd-form-group col-md-1">
                                     <label class="bmd-label-static">上映日 <span class="text-danger">＊</span></label>
 
                                     <input autocomplete="off" class="form-control datepicker" name="date"
@@ -87,7 +87,7 @@ Aa-4
                                     </select>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-4">
                                     <label class="bmd-label-static"></label>
 
                                     <div class="form-check form-check-inline">
@@ -95,7 +95,7 @@ Aa-4
                                             <input class="form-check-input" type="checkbox"
                                                 name="onlyReservedSeatsAvailable" id="onlyReservedSeatsAvailable"
                                                 value="1">
-                                            座席指定有のみ
+                                            座席有のみ
                                             <span class="form-check-sign">
                                                 <span class="check"></span>
                                             </span>
@@ -121,6 +121,16 @@ Aa-4
                                             </span>
                                         </label>
                                     </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="onlyEventScheduled">
+                                            <input class="form-check-input" type="checkbox" name="onlyEventScheduled"
+                                                id="onlyEventScheduled" value="1" checked>
+                                            キャンセル除外
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                         </form>
@@ -134,6 +144,7 @@ Aa-4
                             <thead class="text-primary">
                                 <tr>
                                     <th>ID</th>
+                                    <th>ステータス</th>
                                     <th>作品</th>
                                     <th>場所</th>
                                     <th>開始</th>
@@ -155,6 +166,7 @@ Aa-4
                                             <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                         </a>
                                     </td>
+                                    <td name="eventStatus">$eventStatus$</td>
                                     <td name="superEvent.workPerformed.id__superEvent.workPerformed.name|slice">
                                         <a target="_blank"
                                             href="/creativeWorks/movie/$superEvent.workPerformed.id$/update">$superEvent.workPerformed.name$
