--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -161,9 +161,8 @@ Aa-4
                             <tbody>
                                 <tr id="templateRow" eventId="$id$">
                                     <td name="id__id">
-                                        <a href="javascript:void(0)" class="editPerformance" data-id="$id$">
+                                        <a href="javascript:void(0)" class="showPerformance" data-id="$id$">
                                             $id$
-                                            <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                         </a>
                                     </td>
                                     <td name="eventStatus">$eventStatus$</td>
@@ -247,6 +246,7 @@ Aa-4
         </div>
     </div>
 
+    <%- include('show') %>
 </div>
 
 <div id="scheduler" class="d-none">
@@ -318,5 +318,4 @@ Aa-4
 
 <%- include('add') %>
 <%- include('edit') %>
-<%- include('show') %>
 <%- include('../../common/master/_loading') %>
