### Added - 予約取引追加

--- a/views/transactions/reserve/confirm.ejs
+++ b/views/transactions/reserve/confirm.ejs
@@ -21,16 +21,17 @@ RT-00
             <dd>
                 <%= transaction.id %>
             </dd>
-            <dt>入金者名</dt>
+            <dt>イベント</dt>
+            <dd>
+                <%= event.name.ja %>
+            </dd>
+            <dt>座席番号</dt>
             <dd>
             </dd>
-            <dt>入金先</dt>
+            <dt>座席数</dt>
             <dd>
             </dd>
-            <dt>金額</dt>
-            <dd>
-            </dd>
-            <dt>説明</dt>
+            <dt>追加テキスト</dt>
             <dd>
             </dd>
         </dl>
