--- a/views/transactions/reserve/start.ejs
+++ b/views/transactions/reserve/start.ejs
@@ -25,12 +25,13 @@ RT-00
 
             <div class="form-group">
                 <label for="seatNumbers">座席番号</label>
-                <input type="text" class="form-control" id="seatNumbers" name="seatNumbers" placeholder="座席番号" value="">
+                <input type="text" class="form-control" id="seatNumbers" name="seatNumbers"
+                    placeholder="A-1,A-2,B-1,B-2" value="">
             </div>
 
             <div class="form-group">
                 <label for="numSeats">座席数</label>
-                <input type="number" class="form-control" id="numSeats" name="numSeats" placeholder="座席数" value="">
+                <input type="number" class="form-control" id="numSeats" name="numSeats" placeholder="2" value="">
             </div>
 
             <div class="form-group">
