--- a/views/events/screeningEvent/show.ejs
+++ b/views/events/screeningEvent/show.ejs
@@ -2,12 +2,12 @@
     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <a href="javascript:void(0)" class="mr-2 edit" data-dismiss="modal">
+                <a href="javascript:void(0)" class="mr-2 edit" data-dismiss="modal" title="編集">
                     <i class="material-icons" style="font-size: 1.4em;">edit</i>
                 </a>
                 <div class="dropdown">
                     <a href="javascript:void(0)" class="mr-2" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                        aria-expanded="false" title="オプション">
                         <i class="material-icons" style="font-size: 1.4em;">more_vert</i>
                         <div class="ripple-container"></div>
                     </a>
