--- a/views/transactions/reserve/start.ejs
+++ b/views/transactions/reserve/start.ejs
@@ -5,6 +5,7 @@ RT-00
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
+<script src="/js/transactions/reserve.js"></script>
 
 <%- contentFor('body') %>
 <div class="card">
@@ -21,6 +22,7 @@ RT-00
             <div class="form-row">
                 <div class="form-group bmd-form-group col-md-12">
                     <label class="bmd-label-static">イベント</label>
+                    <input type="hidden" name="event" value="<%= event.id %>">
                 </div>
             </div>
 
@@ -51,8 +53,8 @@ RT-00
 
                 <div class="form-group bmd-form-group col-md-6">
                     <label class="bmd-label-static" for="seatNumbers">座席番号</label>
-                    <input type="text" class="form-control" id="seatNumbers" name="seatNumbers"
-                        placeholder="A-1,A-2,B-1,B-2" value="">
+                    <select class="js-states form-control" multiple="multiple" name="seatNumbers" id="seatNumbers"
+                        style="width: 100%;"></select>
                 </div>
 
                 <div class="form-group bmd-form-group col-md-3">
