--- a/views/events/screeningEvent/show.ejs
+++ b/views/events/screeningEvent/show.ejs
@@ -12,7 +12,7 @@
                         <div class="ripple-container"></div>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a href="javascript:void(0)" class="dropdown-item reserve">予約</a>
+                        <a href="javascript:void(0)" class="dropdown-item reserve">予約する</a>
                     </div>
                 </div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
