--- a/views/transactions/reserve/start.ejs
+++ b/views/transactions/reserve/start.ejs
@@ -40,7 +40,7 @@ RT-00
             </dl>
 
             <div class="form-row">
-                <div class="form-group bmd-form-group col-md-3">
+                <div class="form-group bmd-form-group col-md-12">
                     <label class="bmd-label-static" for="seatSection">座席セクション</label>
                     <select class="form-control" id="seatSection" name="seatSection">
                         <% for (const seatSection of seatSections) { %>
@@ -50,18 +50,56 @@ RT-00
                         <% } %>
                     </select>
                 </div>
+            </div>
 
-                <div class="form-group bmd-form-group col-md-6">
-                    <label class="bmd-label-static" for="seatNumbers">座席番号</label>
-                    <select class="js-states form-control" multiple="multiple" name="seatNumbers" id="seatNumbers"
-                        style="width: 100%;"></select>
-                </div>
+            <% if (useSeats) { %>
 
-                <div class="form-group bmd-form-group col-md-3">
-                    <label class="bmd-label-static" for="numSeats">座席数</label>
-                    <input type="number" class="form-control" id="numSeats" name="numSeats" placeholder="2" value="">
+            <div class="form-row">
+                <div class="form-group bmd-form-group col-md-12">
+                    <label class="bmd-label-static" for="seatNumbers">座席コード
+                        <a href="#" data-toggle="tooltip"
+                            title="<p class=&quot;text-left mb-0&quot;>CSVで入力された場合、セレクトボックスでの選択は無視されます</p>"
+                            style="pointer-events: auto;">
+                            <span class="material-icons" style="font-size: 1.2em;">
+                                help
+                            </span>
+                        </a>
+                    </label>
+
+                    <ul class="nav nav-pills nav-pills-dark mt-3" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist">
+                                選択する
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
+                                CSVで入力
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content">
+                        <div class="tab-pane active show" id="link1">
+                            <select class="js-states form-control" multiple="multiple" name="seatNumbers"
+                                id="seatNumbers" style="width: 100%;"></select>
+                        </div>
+                        <div class="tab-pane" id="link2">
+                            <textarea class="form-control" name="seatNumbersCsv" rows=10
+                                placeholder="branchCode&#13;&#10;A-0&#13;&#10;A-1&#13;&#10;A-2"></textarea>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+
+            <% } else { %>
+            <div class="form-group bmd-form-group col-md-3">
+                <label class="bmd-label-static" for="numSeats">座席数</label>
+                <input type="number" class="form-control" id="numSeats" name="numSeats" placeholder="2" value="">
+            </div>
+            <% } %>
+
 
             <div class="form-row">
                 <div class="form-group bmd-form-group col-md-12">
