### Changed - プロジェクトのデフォルトプランをFreeに設定

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -20,7 +20,7 @@
                 document.write(new Date().getFullYear())
             </script>, made by
             <a href="https://motionpicture.jp" target="_blank">Motion Picture</a>. <b>Version</b> <%= version %>
-            <b>Project</b> <%= req.project.id %>
+            <b>Project</b> <%= req.project.id %>[<%= req.subscription.identifier %>]
         </div>
     </div>
 </footer>
